--- a/WeatherApp/pom.xml
+++ b/WeatherApp/pom.xml
@@ -47,6 +47,18 @@
       <artifactId>javafx-web</artifactId>
       <version>11.0.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.12</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20200518</version>
+    </dependency>
   </dependencies>
 
 </project>
